GG-211 Condition context support.